--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,6 @@
     <title>Découverte Bundle JS</title>
 </head>
 <body>
-    <script src="./dist/app.bundle.js"></script>
+    <script src="app.bundle.js"></script>
 </body>
 </html>
