--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Découverte Bundle JS</title>
 </head>
 <body>
+    <div id="donnees"></div>
     <script src="app.bundle.js"></script>
 </body>
 </html>
